--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,10 @@
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium"
+      },
+
+      "android": {
+        "buildType": "apk"
       }
     },
     "production": {
