--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-toggle-input": "^1.0.12",
     "vcard-generator": "^0.0.7",
-    "vcards-js": "^2.10.0"
+    "vcards-js": "^2.10.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
